# qt-quick-templates

AnimationsQML/: CMakeLists.txt  resources.qrc
AnimationsQML/QML/: MainView.qml  main.qml
DesktopControlsQML/: CMakeLists.txt  main.cpp  resources.qrc
DesktopControlsQML/QML/: main.qml
HelloQML/: CMakeLists.txt  build.sh  main.cpp
HelloQML/qml/: main.qml
HelloWidgets/: CMakeLists.txt  build.sh  exampledialog.cpp  exampledialog.h  main.cpp
HelloWidgetsWithXML/: CMakeLists.txt  build.sh  exampledialog.cpp  exampledialog.h  exampledialog.ui  maindialog.cpp  maindialog.h
QtQuickCppTemplate/: CMakeLists.txt  build.sh  resources.qrc
QtQuickCppTemplate/src_cpp/: BackendUtils.cpp  BackendUtils.h  ExampleButtonActions.cpp  ExampleButtonActions.h  ExampleListModel.cpp  ExampleListModel.h  main.cpp
QtQuickCppTemplate/src_qml/: ExampleWindow.qml  main.qml
SimpleComponentsQML/: main.cpp  resources.qrc
SimpleComponentsQML/QML/: main.qml
SimpleComponentsQML/QML/Components/: ClickableImage.qml  SimpleButton.qml  SimpleLineEdit.qml  SimpleTextEdit.qml
SimpleComponentsQML/QML/Tabs/: Tab1.qml  Tab2.qml  Tab3.qml  Tab4.qml  Tab5.qml
